@@ -1,3 +1,4 @@
+	* use a python python dictionary for settings instead of session_settings object (in python bindings)
 	* optimized metadata transfer (magnet link) startup time (shaved off about 1 second)
 	* optimized swarm startup time (shaved off about 1 second)
 	* support DHT name lookup
